[gd_scene load_steps=2 format=3 uid="uid://c6jncvfcllb34"]

[ext_resource type="Script" uid="uid://duwlcmo4fg6wv" path="res://Scripts/UI/BattleUI.gd" id="1_o21vf"]

[node name="BattleUi" type="CanvasLayer"]
script = ExtResource("1_o21vf")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 0.00392157)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
offset_left = 38.0
offset_top = 317.0
offset_right = 38.0
offset_bottom = 3.0

[node name="TopPanel" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="PlayerHealth" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/TopPanel/PlayerHealth"]
layout_mode = 2
text = "Игрок"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HealthBar" type="ProgressBar" parent="VBoxContainer/TopPanel/PlayerHealth"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 100.0

[node name="EnemyHealth" type="VBoxContainer" parent="VBoxContainer/TopPanel"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="VBoxContainer/TopPanel/EnemyHealth"]
layout_mode = 2
text = "Враг"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="VBoxContainer/TopPanel/EnemyHealth"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 2
value = 100.0

[node name="ATBProgressBar" type="ProgressBar" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 30)
layout_mode = 2
max_value = 3.0

[node name="ActionButtons" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AttackButton" type="Button" parent="VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Атака"

[node name="DefenderButton" type="Button" parent="VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Защита"

[node name="PersuadeButton" type="Button" parent="VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Убедить"

[node name="ItemButton" type="Button" parent="VBoxContainer/ActionButtons"]
custom_minimum_size = Vector2(100, 50)
layout_mode = 2
text = "Предметы"

[node name="BattleLog" type="TextEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(600, 150)
layout_mode = 2
text = "\"Лог боя:\\n\""
editable = false
